regression/smv/syntax-errors/syntax1.smv
MODULE -- forgot the name

VAR abc : BOOLEAN;

